    * `eval -max -min`
    * `file -addmbr`
    * `FUNC` can take func name from tuple pop or string
        * this makes it easier for FUNCs to define FUNCs
    * `gensh` -D -X -prelude and errs on reserved options (DXh)
    * `help` now takes `--` cmdname
    * `map` creates user tuple maps
    * `props` picks up System property ublu.usage.linelength at startup
    * `rs` now takes the closure from either -from or eponymous
    * `sess` command missing break after -to
    * `string -lcase -upcase`
    * `tuple -assign` to non-existent tuple was failing
    * `usage/help` honors property `ublu.usage.linelength`
    * `WHILE` was failing on tuple stack ~ argument
* Examples
    * `createFileFromRecFormat.ublu`
    * `writesrc.ublu`
* Extensions
    * `ux.mbrdesc.ublu`
* Stuff
	* Perl
		* `validateuser.pl` validates a userid / password combo
* Windowing
    * now executes rest of initial command line
    * set colors separately for input and output from menu
* Testing
    * progress on the framework
    * t.dq
    * t.record
    * test result browser
* Ubloid project started for Ublu on Android https://github/jwoehr/ubluoid

1.1.7 2017-07-05
-----
System
* Windowed Ublu
* Goublu support for Go language Ublu console (https://github.com/jwoehr/goublu)

Commands
* desktop
* interpreter
    * -args
    * -opts
    * -arg 
    * -opt 
    * -optarg 
    * -allargs   
* streamf -read (byte reads)

1.1.6 2017-06-01
-----
System
* Option processing improved

Commands
* BREAK - bug fixed, didn't work with nested blocks > 1
* cim and cimi for Common Information Model (added)
* calljava
    * -class
    * -forname
* dq now uses wait on -peek and -read
* eval
    * now does it as Long
        * added inc and dec
        * fixed bug where - mistaken for dash-command
* file greatly enhanced
* ftp command rewritten, new specifications
    * previous ftp command is now called 'oldftp'
* interpreter new command for interpreter debugging
* record greatly enhanced